--- a/AuthApp/templates/profile.html
+++ b/AuthApp/templates/profile.html
@@ -1,3 +1,4 @@
+<h2>username: {{username}}</h2>
 <form method="post">
     {% csrf_token %} {{ form.as_p }}
     <input type=submit value="submit" />
