create MyGroupsList and GroupDetails view

--- a/AuthApp/templates/Home.html
+++ b/AuthApp/templates/Home.html
@@ -18,6 +18,9 @@
     <h2><a href="{% url 'signup' %}">signup</a></h2>
     <h2><a href="{% url 'login' %}">login</a></h2>
     {% endif %}
+    <a href="{% url 'my-groups' %}">
+        <h2>Groups</h2>
+    </a>
 </body>
 
 </html>
